--- a/src/frontend/app/features/words-soup-game/pages/play/play.component.html
+++ b/src/frontend/app/features/words-soup-game/pages/play/play.component.html
@@ -6,19 +6,13 @@
         </div>
 
         <div class="w-full my-8">
-            <label class="text-xl font-semibold">Quais palavras correspondem a imagem?</label>
+            <label class="text-xl font-semibold">{{this.title}}</label>
             <div class="grid grid-cols-2 gap-6 mt-4">
                 <label *ngFor="let word of words; let i = index"
                     class="bg-blue-800 form-control-container py-4 px-6 rounded-lg shadow-lg text-xl text-center"
-                    [class.bg-green-600]="i === 0"
-                    [class.bg-red-600]="i === 1"
-                    [class.bg-yellow-600]="i === 2"
-                    [class.bg-purple-600]="i === 3"
-                    [class.bg-orange-600]="i === 4"
-                    [class.bg-pink-600]="i === 5"
-                    [class.bg-gray-600]="i === 6"
-                    [class.bg-teal-600]="i === 7"
-                    >
+                    [class.bg-green-600]="i === 0" [class.bg-red-600]="i === 1" [class.bg-yellow-600]="i === 2"
+                    [class.bg-purple-600]="i === 3" [class.bg-orange-600]="i === 4" [class.bg-pink-600]="i === 5"
+                    [class.bg-gray-600]="i === 6" [class.bg-teal-600]="i === 7">
                     <input type="checkbox" [value]="word.id" (change)="onCheckboxChange($event)" />
                     {{ word.name }}
                 </label>
@@ -29,7 +23,8 @@
             <a class="bg-blue-800 text-white py-4 px-10 rounded-lg shadow-xl hover:bg-blue-900 text-xl mr-10">
                 Voltar
             </a>
-            <button type="submit" class="bg-green-600 text-white py-4 px-10 rounded-lg shadow-xl hover:bg-green-700 text-xl">
+            <button type="submit"
+                class="bg-green-600 text-white py-4 px-10 rounded-lg shadow-xl hover:bg-green-700 text-xl">
                 Terminar teste
             </button>
         </div>
